--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "unix-timestamp",
+  "homepage": "https://skeoh.com/unix-timestamp",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -7,6 +8,7 @@
   "dependencies": {
     "@types/react-redux": "7.1.4",
     "bootstrap": "4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-redux": "7.1.1",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
